--- a/Dockerfile.batch
+++ b/Dockerfile.batch
@@ -2,10 +2,9 @@
 FROM python:3.9-slim
 WORKDIR /app
 
-# Cài các thư viện mà script compaction.py cần
-RUN pip install pandas s3fs pyarrow
+RUN pip install pandas s3fs pyarrow sqlalchemy psycopg2-binary
 
-# Copy script vào (Lưu ý: Đảm bảo file trong thư mục batch tên là compaction.py)
+# Copy script vào
 COPY batch/compaction.py .
 
 # Chạy script
